fixed styling for index and account pages on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -106,8 +106,15 @@
     margin: auto;
     padding: 20px;
     font-family: var(--project-title-font-new);
-    background-color: #0000004a;
-    border-radius: 20px;
+    text-shadow:
+                -2px -2px 0 #000,
+                2px -2px 0 #000,
+                -2px 2px 0 #000,
+                2px 2px 0 #000,
+                -3px 0px 0 #000,
+                3px 0px 0 #000,
+                0px -3px 0 #000,
+                0px 3px 0 #000;
 }
 
 #project_start #project_main {
@@ -195,8 +202,19 @@
     /* transform: translateY(-15px) scale(1.15); */
 }
 
-@media (max-width: 480px) {}
+@media (max-width: 480px) {
+    #project_start #game_mainBtn {
+        height: 40%;
+    }
+}
 
+
+@media (max-width: 480px) or (max-height: 480px) {
+
+    #project_start .game_option {
+        display: none;
+    }
+}
 
 
 /*========================================*/
@@ -225,6 +243,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    gap: 5px;
 
     top: 50%;
     transform: translateY(-50%);
@@ -271,6 +290,7 @@
 
 .accountPages .blackbox form input {
     width: 100%;
+    max-width: 600px;
     height: 50px;
     background: white;
     padding: 0.5rem 1rem;
@@ -336,7 +356,7 @@
     text-shadow: 0px 0px 3px black;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 480px) or (max-height: 480px) {
     .accountPages .blackbox {
         justify-content: center;
 
@@ -346,20 +366,21 @@
         border-radius: 0px;
     }
 
-    #project_start #game_mainBtn {
-        height: 40%;
-    }
-
     .blackbox h1 {
         font-size: 35px;
+    }
+
+    .accountPages .blackbox form {
+        gap: 10px;
     }
 
     .accountPages .blackbox form button {
         width: 80%;
         max-width: 250px;
+        height: 40px;
     }
 
-    #project_start .game_option {
-        display: none;
+    .accountPages .blackbox form input {
+        height: 40px;
     }
 }
